--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -380,7 +380,7 @@
         "        game_dict[\"winner_name\"]=all_games_round[game_number].text.strip()\n",
         "        game_dict[\"loser_name\"]=all_games_round[game_number+1].text.strip()\n",
         "        game_dict[\"score\"]=re.sub(r'\\s+','-',scrapping_tournament.find_all(\"td\",\"day-table-score\")[game_number].text.strip().replace(\"\\r\\n\",''))\n",
-        "        list_matchs.append(game_dict)\n",
+        "        list_matchs_tournament.append(game_dict)\n",
         "      round_tracker+=1\n",
         "  else:\n",
         "    game_dict={}\n",
@@ -439,7 +439,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOWRIu47jSyZ5jflu6avpA2",
+      "authorship_tag": "ABX9TyO/WiohumfEPAusIn7O6OB/",
       "include_colab_link": true
     },
     "kernelspec": {
