--- a/update_all_matchs.ipynb
+++ b/update_all_matchs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOP4rcqcAjNhwQIf95ViANY",
+      "authorship_tag": "ABX9TyOPxNgPAJpr14DIPYGKe1I/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,8 @@
         "\n",
         "install_package(\"requests\")\n",
         "install_package(\"PyGitHub\")\n",
-        "install_package(\"pandas\")"
+        "install_package(\"pandas\")\n",
+        "install_package(\"tqdm\")"
       ],
       "metadata": {
         "colab": {
@@ -91,10 +92,26 @@
         "          exec(cell.source)"
       ],
       "metadata": {
-        "id": "0GMw8_fEXOEX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0GMw8_fEXOEX",
+        "outputId": "c85b0b76-a50b-46b6-e461-b01dfbac4bea"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed requests\n",
+            "Successfully installed requests\n",
+            "Successfully installed PyGitHub\n",
+            "Successfully installed pandas\n",
+            "Successfully installed requests\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -130,10 +147,22 @@
         "add_file_github('df_all_matchs.csv',final_df.to_csv(index=False))"
       ],
       "metadata": {
-        "id": "BnoVLxI-hrd0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BnoVLxI-hrd0",
+        "outputId": "0090712b-7293-469d-8c28-19e86db4ef1f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 7/7 [00:08<00:00,  1.15s/it]\n"
+          ]
+        }
+      ]
     }
   ]
 }
