--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -364,6 +364,7 @@
         "  \"\"\"\n",
         "  list_matchs_tournament=[]\n",
         "  tournament_url=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
+        "  print(tournament_url)\n",
         "  scrapping_tournament=html_elements_from_url(tournament_url,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
         "  if len(scrapping_tournament)>0:\n",
         "    scrapping_tournament=scrapping_tournament[0]\n",
@@ -394,52 +395,13 @@
       },
       "execution_count": 2,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "# import pandas as pd\n",
-        "# from tqdm import tqdm\n",
-        "# import re\n",
-        "\n",
-        "# df_all_matchs=get_file_content(\"df_all_matchs.csv\")\n",
-        "# df_tournaments=get_file_content(\"df_tournaments.csv\")\n",
-        "\n",
-        "# list_matchs=[]\n",
-        "# pct_tournaments=1\n",
-        "# nb_rows=int(pct_tournaments*len(df_tournaments))\n",
-        "# for index,row in tqdm(df_tournaments[:int(nb_rows)].iterrows(), total=nb_rows):\n",
-        "#   list_matchs+=find_matchs(row)\n",
-        "\n",
-        "# games_to_add=pd.DataFrame(list_matchs).dropna(subset='winner_name')\n",
-        "\n",
-        "# final_df=pd.concat([df_all_matchs,games_to_add]).drop_duplicates()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cHWJDeiEZJx1",
-        "outputId": "4051e71c-3a14-4562-dea3-7555b0d89392"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 7/7 [00:10<00:00,  1.50s/it]\n"
-          ]
-        }
-      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyO/WiohumfEPAusIn7O6OB/",
+      "authorship_tag": "ABX9TyM+DlHskcOV1IH8rkuhYqDv",
       "include_colab_link": true
     },
     "kernelspec": {
