--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -364,7 +364,6 @@
         "  \"\"\"\n",
         "  list_matchs_tournament=[]\n",
         "  tournament_url=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
-        "  print(tournament_url)\n",
         "  scrapping_tournament=html_elements_from_url(tournament_url,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
         "  if len(scrapping_tournament)>0:\n",
         "    scrapping_tournament=scrapping_tournament[0]\n",
@@ -380,7 +379,7 @@
         "        game_dict[\"round\"]=round_name.text\n",
         "        game_dict[\"winner_name\"]=all_games_round[game_number].text.strip()\n",
         "        game_dict[\"loser_name\"]=all_games_round[game_number+1].text.strip()\n",
-        "        game_dict[\"score\"]=re.sub(r'\\s+','-',scrapping_tournament.find_all(\"td\",\"day-table-score\")[game_number].text.strip().replace(\"\\r\\n\",''))\n",
+        "        game_dict[\"score\"]=re.sub(r'\\s+','-',scrapping_tournament.find_all(\"td\",\"day-table-score\")[int(game_number/2)].text.strip().replace(\"\\r\\n\",''))\n",
         "        list_matchs_tournament.append(game_dict)\n",
         "      round_tracker+=1\n",
         "  else:\n",
@@ -401,7 +400,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyM+DlHskcOV1IH8rkuhYqDv",
+      "authorship_tag": "ABX9TyO5RNxwN/DiT9tJ8bmcHAyw",
       "include_colab_link": true
     },
     "kernelspec": {
