--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -364,6 +364,7 @@
         "  \"\"\"\n",
         "  list_matchs_tournament=[]\n",
         "  tournament_url=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
+        "  print(tournament_url)\n",
         "  scrapping_tournament=html_elements_from_url(tournament_url,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
         "  if len(scrapping_tournament)>0:\n",
         "    scrapping_tournament=scrapping_tournament[0]\n",
@@ -400,7 +401,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyO5RNxwN/DiT9tJ8bmcHAyw",
+      "authorship_tag": "ABX9TyPfH66s5O9q/6sEpgHSch1o",
       "include_colab_link": true
     },
     "kernelspec": {
