--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -363,9 +363,16 @@
         "  Takes a row of the df_tournament.csv and returns the different games\n",
         "  \"\"\"\n",
         "  list_matchs_tournament=[]\n",
-        "  tournament_url=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
+        "  tournament_url_archive=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
+        "  tournament_url_current=\"https://www.atptour.com/en/scores/current\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
+        "\n",
         "  print(tournament_url)\n",
-        "  scrapping_tournament=html_elements_from_url(tournament_url,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
+        "  scrapping_tournament_archive=html_elements_from_url(tournament_url_archive,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
+        "  scrapping_tournament_current=html_elements_from_url(tournament_url_current,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
+        "  if len(scrapping_tournament_archive)>0:\n",
+        "    scrapping_tournament=scrapping_tournament_archive\n",
+        "  elif (len(scrapping_tournament_current))>0:\n",
+        "    scrapping_tournament=scrapping_tournament_current\n",
         "  if len(scrapping_tournament)>0:\n",
         "    scrapping_tournament=scrapping_tournament[0]\n",
         "    all_round=scrapping_tournament.find_all(\"tbody\")\n",
@@ -401,7 +408,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPfH66s5O9q/6sEpgHSch1o",
+      "authorship_tag": "ABX9TyP0B6ayE100l4BK4fZv/xLF",
       "include_colab_link": true
     },
     "kernelspec": {
