--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -365,12 +365,13 @@
         "  list_matchs_tournament=[]\n",
         "  tournament_url_archive=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
         "  tournament_url_current=\"https://www.atptour.com/en/scores/current\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
-        "\n",
+        "  print(tournament_url_archive,tournament_url_current)\n",
         "  scrapping_tournament_archive=html_elements_from_url(tournament_url_archive,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
         "  scrapping_tournament_current=html_elements_from_url(tournament_url_current,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
+        "  scrapping_tournament=''\n",
         "  if len(scrapping_tournament_archive)>0:\n",
         "    scrapping_tournament=scrapping_tournament_archive\n",
-        "  elif (len(scrapping_tournament_current))>0:\n",
+        "  if (len(scrapping_tournament_current))>0:\n",
         "    scrapping_tournament=scrapping_tournament_current\n",
         "  if len(scrapping_tournament)>0:\n",
         "    scrapping_tournament=scrapping_tournament[0]\n",
@@ -401,13 +402,31 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_HkEDMY0l4jB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yk-RW_X7l4_w"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNvVhtvx9KNNA+ZMXFDx/3s",
+      "authorship_tag": "ABX9TyMU7h31phj4CvkGqh3Cnxy5",
       "include_colab_link": true
     },
     "kernelspec": {
