--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -364,7 +364,7 @@
         "  \"\"\"\n",
         "  list_matchs_tournament=[]\n",
         "  tournament_url_archive=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
-        "  tournament_url_current=\"https://www.atptour.com/en/scores/current\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
+        "  tournament_url_current=\"https://www.atptour.com/en/scores/current\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+'/results'\n",
         "  print(tournament_url_archive,tournament_url_current)\n",
         "  scrapping_tournament_archive=html_elements_from_url(tournament_url_archive,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
         "  scrapping_tournament_current=html_elements_from_url(tournament_url_current,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
@@ -426,7 +426,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyMU7h31phj4CvkGqh3Cnxy5",
+      "authorship_tag": "ABX9TyOh1OUccF1GlOd6YQJimmLP",
       "include_colab_link": true
     },
     "kernelspec": {
