--- a/update_all_matchs.ipynb
+++ b/update_all_matchs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN08XnjyLtFFevdgrRz+mPt",
+      "authorship_tag": "ABX9TyNYtuvpCxbLljhstzQt2Cdi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oHh3Jgp5dHP_",
-        "outputId": "a764be05-4eba-45f2-c704-f38a5836e07f"
+        "outputId": "da8b0e40-06c9-42bb-f3ed-3dec5eb3fd16"
       },
       "execution_count": 1,
       "outputs": [
@@ -97,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0GMw8_fEXOEX",
-        "outputId": "6f3186d9-8a73-4b5a-cff2-87d0d35a26f8"
+        "outputId": "a688efb5-f076-4344-f985-92f2040a0b5a"
       },
       "execution_count": 2,
       "outputs": [
@@ -152,113 +152,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BnoVLxI-hrd0",
-        "outputId": "a3c9a5a3-52b7-4076-96a2-6628d819a6c9"
+        "outputId": "243c61db-f04f-495b-f85c-398a40af4310"
       },
-      "execution_count": 31,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 0/7 [00:00<?, ?it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "https://www.atptour.com/en/scores/archive/shanghai/5014/2023/results https://www.atptour.com/en/scores/current/shanghai/5014//results\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 14%|█▍        | 1/7 [00:02<00:14,  2.35s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "https://www.atptour.com/en/scores/archive/tokyo/329/2023/results https://www.atptour.com/en/scores/current/tokyo/329//results\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 29%|██▊       | 2/7 [00:03<00:07,  1.54s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "https://www.atptour.com/en/scores/archive/stockholm/429/2023/results https://www.atptour.com/en/scores/current/stockholm/429//results\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 43%|████▎     | 3/7 [00:04<00:05,  1.35s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "https://www.atptour.com/en/scores/archive/antwerp/7485/2023/results https://www.atptour.com/en/scores/current/antwerp/7485//results\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 57%|█████▋    | 4/7 [00:05<00:03,  1.09s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "https://www.atptour.com/en/scores/archive/vienna/337/2023/results https://www.atptour.com/en/scores/current/vienna/337//results\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 71%|███████▏  | 5/7 [00:06<00:02,  1.24s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "https://www.atptour.com/en/scores/archive/basel/328/2023/results https://www.atptour.com/en/scores/current/basel/328//results\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 86%|████████▌ | 6/7 [00:07<00:01,  1.08s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "https://www.atptour.com/en/scores/archive/paris/352/2023/results https://www.atptour.com/en/scores/current/paris/352//results\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 7/7 [00:07<00:00,  1.12s/it]\n"
+            "100%|██████████| 7/7 [00:11<00:00,  1.57s/it]\n"
           ]
         }
       ]
@@ -275,12 +177,12 @@
         "string_return=str(time_run)+': '+str(number_new_tournaments)+' new tournaments and '+str(number_new_games)+' new games'\n",
         "matchs_report.append(string_return)\n",
         "\n",
-        "add_file_github('update_all_matchs_report.txt',str(matchs_report).replace(',','\\n'))"
+        "add_file_github('update_all_matchs_report.txt',str(matchs_report).replace(',',',\\n'))"
       ],
       "metadata": {
         "id": "WIvWUHLyPGTu"
       },
-      "execution_count": 32,
+      "execution_count": 17,
       "outputs": []
     }
   ]
