--- a/update_all_matchs.ipynb
+++ b/update_all_matchs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYtuvpCxbLljhstzQt2Cdi",
+      "authorship_tag": "ABX9TyN251RKO3zVNK88SlPsrsf7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,7 +174,7 @@
         "number_new_games=len(final_df)-len(df_all_matchs)\n",
         "time_run=datetime.now()\n",
         "\n",
-        "string_return=str(time_run)+': '+str(number_new_tournaments)+' new tournaments and '+str(number_new_games)+' new games'\n",
+        "string_return=str(time_run)+': '+str(number_new_tournaments)+' new tournaments and '+str(number_new_games)+' new games. Total Number of games: '+str(len(final_df))+' - Total number of players: '+str(len(final_df['loser_name'].unique()))\n",
         "matchs_report.append(string_return)\n",
         "\n",
         "add_file_github('update_all_matchs_report.txt',str(matchs_report).replace(',',',\\n'))"
@@ -182,7 +182,7 @@
       "metadata": {
         "id": "WIvWUHLyPGTu"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     }
   ]
