--- a/update_all_matchs.ipynb
+++ b/update_all_matchs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN251RKO3zVNK88SlPsrsf7",
+      "authorship_tag": "ABX9TyMP+IYe6SmteH9AJsXTAUpG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oHh3Jgp5dHP_",
-        "outputId": "da8b0e40-06c9-42bb-f3ed-3dec5eb3fd16"
+        "outputId": "43fb8cd2-ec63-4d72-955a-0bc1bd61b779"
       },
       "execution_count": 1,
       "outputs": [
@@ -97,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0GMw8_fEXOEX",
-        "outputId": "a688efb5-f076-4344-f985-92f2040a0b5a"
+        "outputId": "646f18a4-5b80-4b17-85b8-839639da921f"
       },
       "execution_count": 2,
       "outputs": [
@@ -142,8 +142,9 @@
         "  list_matchs+=find_matchs(row)\n",
         "\n",
         "games_to_add=pd.DataFrame(list_matchs).dropna(subset='winner_name')\n",
+        "games_to_add=games_to_add[~(games_to_add['loser_name']+games_to_add['winner_name']).isin((df_all_matchs['loser_name']+df_all_matchs['winner_name']).unique())]\n",
         "\n",
-        "final_df=pd.concat([df_all_matchs,games_to_add]).drop_duplicates().reset_index(drop=True)\n",
+        "final_df=pd.concat([df_all_matchs,games_to_add]).reset_index(drop=True)\n",
         "\n",
         "add_file_github('df_all_matchs.csv',final_df.to_csv(index=False))"
       ],
@@ -152,15 +153,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BnoVLxI-hrd0",
-        "outputId": "243c61db-f04f-495b-f85c-398a40af4310"
+        "outputId": "d07998b0-dcb6-4bd1-bf98-2adbdeafce6c"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 7/7 [00:11<00:00,  1.57s/it]\n"
+            "100%|██████████| 6/6 [00:11<00:00,  1.89s/it]\n"
           ]
         }
       ]
@@ -182,7 +183,7 @@
       "metadata": {
         "id": "WIvWUHLyPGTu"
       },
-      "execution_count": 18,
+      "execution_count": 9,
       "outputs": []
     }
   ]
