--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -367,10 +367,11 @@
         "  tournament_url_current=\"https://www.atptour.com/en/scores/current\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+'/results'\n",
         "  scrapping_tournament_archive=html_elements_from_url(tournament_url_archive,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
         "  scrapping_tournament_current=html_elements_from_url(tournament_url_current,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
+        "\n",
         "  scrapping_tournament=''\n",
         "  if len(scrapping_tournament_archive)>0:\n",
         "    scrapping_tournament=scrapping_tournament_archive\n",
-        "  if (len(scrapping_tournament_current))>0:\n",
+        "  elif (len(scrapping_tournament_current))>0:\n",
         "    scrapping_tournament=scrapping_tournament_current\n",
         "  if len(scrapping_tournament)>0:\n",
         "    scrapping_tournament=scrapping_tournament[0]\n",
@@ -401,13 +402,22 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ranking table"
+      ],
+      "metadata": {
+        "id": "UY7lPcEQEGiB"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOtJfwkPeeI0oijTsgSAOjd",
+      "authorship_tag": "ABX9TyPMhkMt4R2bMy9PZXP5952u",
       "include_colab_link": true
     },
     "kernelspec": {
