--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -373,13 +373,19 @@
         "    scrapping_tournament=scrapping_tournament_archive\n",
         "  elif (len(scrapping_tournament_current))>0:\n",
         "    scrapping_tournament=scrapping_tournament_current\n",
+        "\n",
         "  if len(scrapping_tournament)>0:\n",
+        "    # print('Number of games all',scrapping_tournament.find_all(\"td\",\"day-table-score\"))\n",
         "    scrapping_tournament=scrapping_tournament[0]\n",
         "    all_round=scrapping_tournament.find_all(\"tbody\")\n",
         "    round_tracker=0\n",
+        "    game_tracker=0\n",
         "    for round in all_round:\n",
         "      all_games_round=round.find_all(\"td\",\"day-table-name\")\n",
+        "      print('Number of games round',len(all_games_round))\n",
+        "\n",
         "      round_name=scrapping_tournament.find_all(\"th\")[round_tracker]\n",
+        "      # print(all_games_round)\n",
         "      for game_number in range(0,len(all_games_round),2):\n",
         "        game_dict={}\n",
         "        game_dict[\"tournament_name\"]=tournament_row[\"tournament_name\"]\n",
@@ -387,8 +393,11 @@
         "        game_dict[\"round\"]=round_name.text\n",
         "        game_dict[\"winner_name\"]=all_games_round[game_number].text.strip()\n",
         "        game_dict[\"loser_name\"]=all_games_round[game_number+1].text.strip()\n",
-        "        game_dict[\"score\"]=re.sub(r'\\s+','-',scrapping_tournament.find_all(\"td\",\"day-table-score\")[int(game_number/2)].text.strip().replace(\"\\r\\n\",''))\n",
+        "\n",
+        "        game_dict[\"score\"]=re.sub(r'\\s+','-',scrapping_tournament.find_all(\"td\",\"day-table-score\")[game_tracker].text.strip().replace(\"\\r\\n\",''))\n",
         "        list_matchs_tournament.append(game_dict)\n",
+        "        game_tracker+=1 #need to count the number of games\n",
+        "\n",
         "      round_tracker+=1\n",
         "  else:\n",
         "    game_dict={}\n",
@@ -417,7 +426,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPMhkMt4R2bMy9PZXP5952u",
+      "authorship_tag": "ABX9TyMlB3PiNTvr6DXMVzQBVpbD",
       "include_colab_link": true
     },
     "kernelspec": {
