--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -414,18 +414,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ranking table"
+        "# Ranking table"
       ],
       "metadata": {
         "id": "UY7lPcEQEGiB"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_ranking(weekly_ranking_url):\n",
+        "  date=weekly_ranking_url.split('rankDate=')[1]\n",
+        "  rankings=html_elements_from_url(weekly_ranking_url,'td',['rank-cell border-left-4 border-right-dash-1'])['rank-cell border-left-4 border-right-dash-1']\n",
+        "  players=html_elements_from_url(weekly_ranking_url,'span',['player-cell-wrapper'])['player-cell-wrapper']\n",
+        "  list_ranking_week=[]\n",
+        "  for k in range(len(rankings)):\n",
+        "    dict_week={}\n",
+        "    dict_week['player_name']=(players[k].text.strip())\n",
+        "    dict_week['ranking']=(rankings[k].text.strip())\n",
+        "    dict_week['date']=date\n",
+        "    list_ranking_week.append(dict_week)\n",
+        "  return pd.DataFrame(list_ranking_week)"
+      ],
+      "metadata": {
+        "id": "hnaCT4B_PaXA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyM9Wy/mOCgCATFoXrUFvWvp",
+      "authorship_tag": "ABX9TyMD4sQyJYqMXGbss6pw7JjC",
       "include_colab_link": true
     },
     "kernelspec": {
