--- a/update_ranking.ipynb
+++ b/update_ranking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMSKqPidJCf+psuFj2CgTih",
+      "authorship_tag": "ABX9TyOV2irnhhpc0R76pF67eF3V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,14 +135,14 @@
         "week_url=find_list_weekly_ranking_url(previous_week,current_date,nb_players_ranking=300)[0]\n",
         "ranking_week=get_ranking(week_url)\n",
         "\n",
-        "previous_ranking=get_file_content(\"df_all_ranking.csv\")\n",
+        "previous_ranking=get_file_content(\"data/df_all_ranking.csv\")\n",
         "df_ranking_all=pd.concat([previous_ranking,ranking_week]).reset_index(drop=True).drop_duplicates()\n",
-        "add_file_github(\"df_all_ranking.csv\",df_ranking_all.to_csv(index=False))\n"
+        "add_file_github(\"data/df_all_ranking.csv\",df_ranking_all.to_csv(index=False))\n"
       ],
       "metadata": {
         "id": "BnoVLxI-hrd0"
       },
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": []
     }
   ]
