--- a/update_all_matchs.ipynb
+++ b/update_all_matchs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMP+IYe6SmteH9AJsXTAUpG",
+      "authorship_tag": "ABX9TyPxwQcJ1XyrEQgUf4mtVhV6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oHh3Jgp5dHP_",
-        "outputId": "43fb8cd2-ec63-4d72-955a-0bc1bd61b779"
+        "outputId": "a2644e86-c694-4027-f410-d3396fd2b266"
       },
       "execution_count": 1,
       "outputs": [
@@ -97,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0GMw8_fEXOEX",
-        "outputId": "646f18a4-5b80-4b17-85b8-839639da921f"
+        "outputId": "1ecd52da-f8f1-4182-a400-5f018f1fb9c2"
       },
       "execution_count": 2,
       "outputs": [
@@ -129,8 +129,8 @@
         "from tqdm import tqdm\n",
         "import re\n",
         "\n",
-        "df_all_matchs=get_file_content(\"df_all_matchs.csv\")\n",
-        "df_tournaments=get_file_content(\"df_tournaments.csv\")\n",
+        "df_all_matchs=get_file_content(\"data/df_all_matchs.csv\")\n",
+        "df_tournaments=get_file_content(\"data/df_tournaments.csv\")\n",
         "\n",
         "df_tournaments=df_tournaments[(pd.to_datetime(df_tournaments['tournament_date'])>=(datetime.now()-timedelta(days=15)))&\n",
         "                              (pd.to_datetime(df_tournaments['tournament_date'])<=(datetime.now()+timedelta(days=15)))]\n",
@@ -141,27 +141,27 @@
         "for index,row in tqdm(df_tournaments[:int(nb_rows)].iterrows(), total=nb_rows):\n",
         "  list_matchs+=find_matchs(row)\n",
         "\n",
-        "games_to_add=pd.DataFrame(list_matchs).dropna(subset='winner_name')\n",
-        "games_to_add=games_to_add[~(games_to_add['loser_name']+games_to_add['winner_name']).isin((df_all_matchs['loser_name']+df_all_matchs['winner_name']).unique())]\n",
+        "result = pd.merge(pd.DataFrame(list_matchs), df_all_matchs, how='left', indicator=True)\n",
+        "rows_not_in_df_match = result[result['_merge'] == 'left_only'].drop(columns=['_merge'])\n",
         "\n",
-        "final_df=pd.concat([df_all_matchs,games_to_add]).reset_index(drop=True)\n",
+        "final_df=pd.concat([df_all_matchs,rows_not_in_df_match]).reset_index(drop=True)\n",
         "\n",
-        "add_file_github('df_all_matchs.csv',final_df.to_csv(index=False))"
+        "add_file_github('data/df_all_matchs.csv',final_df.to_csv(index=False))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BnoVLxI-hrd0",
-        "outputId": "d07998b0-dcb6-4bd1-bf98-2adbdeafce6c"
+        "outputId": "34e7bdc9-622e-4c2d-f44f-671fc3820a86"
       },
-      "execution_count": 7,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 6/6 [00:11<00:00,  1.89s/it]\n"
+            "100%|██████████| 6/6 [00:13<00:00,  2.21s/it]\n"
           ]
         }
       ]
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "WIvWUHLyPGTu"
       },
-      "execution_count": 9,
+      "execution_count": 127,
       "outputs": []
     }
   ]
