--- a/update_fixed_table.ipynb
+++ b/update_fixed_table.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdbuO3m9koLwrbq3oQEiUS",
+      "authorship_tag": "ABX9TyMVWuTguhBddM9xMAfS24zD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,10 +44,24 @@
         "install_package(\"pandas\")"
       ],
       "metadata": {
-        "id": "oHh3Jgp5dHP_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oHh3Jgp5dHP_",
+        "outputId": "442814d2-f6cd-4b37-9805-947e2a25d06d"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed requests\n",
+            "Successfully installed PyGitHub\n",
+            "Successfully installed pandas\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -81,17 +95,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0GMw8_fEXOEX",
-        "outputId": "6aa274be-7fcb-4f60-eb1a-6a19f2db3677"
+        "outputId": "523f8407-b6ba-44c5-9436-a36c3073d5d3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Successfully installed requests\n",
+            "Successfully installed requests\n",
             "Successfully installed PyGitHub\n",
-            "Successfully installed pandas\n"
+            "Successfully installed pandas\n",
+            "Successfully installed requests\n"
           ]
         }
       ]
@@ -108,9 +124,9 @@
     {
       "cell_type": "code",
       "source": [
-        "list_urls=get_file_content('list_all_urls.txt')\n",
-        "list_player_names=get_file_content('list_all_players_names.txt')\n",
-        "fixed_table=get_file_content('df_player_fixed.csv')\n",
+        "list_urls=get_file_content('data/list_all_urls.txt')\n",
+        "list_player_names=get_file_content('data/list_all_players_names.txt')\n",
+        "fixed_table=get_file_content('data/df_player_fixed.csv')\n",
         "\n",
         "url_ranking='https://www.atptour.com/en/rankings/singles?rankRange=1-200'\n",
         "\n",
@@ -129,7 +145,7 @@
         "id": "xbf1S32ouBJy",
         "outputId": "ff937deb-2785-4f9b-82c3-48054a9e399d"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,14 +165,14 @@
         "list_player_names_all=list_player_names_new+list_player_names\n",
         "list_urls_all=list_urls_new+list_urls\n",
         "\n",
-        "add_file_github('list_all_urls.txt',str(list_urls_all))\n",
-        "add_file_github('list_all_players_names.txt',str(list_player_names_all))\n",
-        "add_file_github('df_player_fixed.csv',df_fixed_all.to_csv(index=False))\n"
+        "add_file_github('data/list_all_urls.txt',str(list_urls_all))\n",
+        "add_file_github('data/list_all_players_names.txt',str(list_player_names_all))\n",
+        "add_file_github('data/df_player_fixed.csv',df_fixed_all.to_csv(index=False))\n"
       ],
       "metadata": {
         "id": "Eq5mM_NOg1gU"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     }
   ]
