--- a/functions/github_functions.ipynb
+++ b/functions/github_functions.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/github_functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/functions/github_functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -19,12 +19,12 @@
       "metadata": {
         "id": "6gHtauxrTwNz"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,20 +110,24 @@
         "      repo.create_file(file_name, \"Create file\", file_content, branch_name)\n",
         "      # print(f\"Created {file_name} in {repository_name}\")\n",
         "\n",
+        "def download_file_from_github(file_url):\n",
+        "    response = requests.get(file_url)\n",
+        "    return response.content\n",
+        "\n",
+        "\n",
         "def get_file_content(file_name):\n",
-        "  file_content = repo.get_contents(file_name, ref=branch_name)\n",
-        "  file_content = file_content.decoded_content.decode(\"utf-8\")\n",
+        "  file_content=download_file_from_github(\"https://raw.githubusercontent.com/jeanbouteiller-ds/tennis_prediction/main/\"+file_name)\n",
         "  if file_name.split('.')[1]=='txt':\n",
         "    file_content=eval(file_content)\n",
         "    return(file_content)\n",
         "  if file_name.split('.')[1]=='csv':\n",
-        "    file_content=pd.read_csv(StringIO(file_content))\n",
-        "    return(file_content)"
+        "    file_content=pd.read_csv(io.BytesIO(file_content))\n",
+        "    return(file_content)\n"
       ],
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     }
   ],
@@ -131,7 +135,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyN//Q5m0Co4sF3xCjGhbCoc",
+      "authorship_tag": "ABX9TyP//Ckq5vrLiZu/HWPYndCM",
       "include_colab_link": true
     },
     "kernelspec": {
