--- a/functions/functions_fixed_table.ipynb
+++ b/functions/functions_fixed_table.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/functions_fixed_table.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/functions/functions_fixed_table.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -363,47 +363,50 @@
         "  Takes a row of the df_tournament.csv and returns the different games\n",
         "  \"\"\"\n",
         "  list_matchs_tournament=[]\n",
-        "  tournament_url_archive=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
-        "  tournament_url_current=\"https://www.atptour.com/en/scores/current\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+'/results'\n",
-        "  scrapping_tournament_archive=html_elements_from_url(tournament_url_archive,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
-        "  scrapping_tournament_current=html_elements_from_url(tournament_url_current,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
-        "\n",
-        "  scrapping_tournament=''\n",
-        "  if len(scrapping_tournament_archive)>0:\n",
-        "    scrapping_tournament=scrapping_tournament_archive\n",
-        "  elif (len(scrapping_tournament_current))>0:\n",
-        "    scrapping_tournament=scrapping_tournament_current\n",
-        "\n",
-        "  if len(scrapping_tournament)>0:\n",
-        "    # print('Number of games all',scrapping_tournament.find_all(\"td\",\"day-table-score\"))\n",
-        "    scrapping_tournament=scrapping_tournament[0]\n",
-        "    all_round=scrapping_tournament.find_all(\"tbody\")\n",
-        "    round_tracker=0\n",
-        "    game_tracker=0\n",
-        "    for round in all_round:\n",
-        "      all_games_round=round.find_all(\"td\",\"day-table-name\")\n",
-        "\n",
-        "      round_name=scrapping_tournament.find_all(\"th\")[round_tracker]\n",
-        "      # print(all_games_round)\n",
-        "      for game_number in range(0,len(all_games_round),2):\n",
-        "        game_dict={}\n",
-        "        game_dict[\"tournament_name\"]=tournament_row[\"tournament_name\"]\n",
-        "        game_dict[\"tournament_date\"]=tournament_row[\"tournament_date\"]\n",
-        "        game_dict[\"round\"]=round_name.text\n",
-        "        game_dict[\"winner_name\"]=all_games_round[game_number].text.strip()\n",
-        "        game_dict[\"loser_name\"]=all_games_round[game_number+1].text.strip()\n",
-        "\n",
-        "        game_dict[\"score\"]=re.sub(r'\\s+','-',scrapping_tournament.find_all(\"td\",\"day-table-score\")[game_tracker].text.strip().replace(\"\\r\\n\",''))\n",
-        "        list_matchs_tournament.append(game_dict)\n",
-        "        game_tracker+=1 #need to count the number of games\n",
-        "\n",
-        "      round_tracker+=1\n",
+        "  if \"laver-cup\" in tournament_row[\"url\"]:\n",
+        "    return []\n",
         "  else:\n",
-        "    game_dict={}\n",
-        "    game_dict[\"tournament_name\"]=tournament_row[\"tournament_name\"]\n",
-        "    game_dict[\"tournament_date\"]=tournament_row[\"tournament_date\"]\n",
-        "    list_matchs_tournament.append(game_dict)\n",
-        "  return list_matchs_tournament"
+        "    tournament_url_archive=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
+        "    tournament_url_current=\"https://www.atptour.com/en/scores/current\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+'/results'\n",
+        "    scrapping_tournament_archive=html_elements_from_url(tournament_url_archive,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
+        "    scrapping_tournament_current=html_elements_from_url(tournament_url_current,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
+        "\n",
+        "    scrapping_tournament=''\n",
+        "    if len(scrapping_tournament_archive)>0:\n",
+        "      scrapping_tournament=scrapping_tournament_archive\n",
+        "    elif (len(scrapping_tournament_current))>0:\n",
+        "      scrapping_tournament=scrapping_tournament_current\n",
+        "\n",
+        "    if len(scrapping_tournament)>0:\n",
+        "      # print('Number of games all',scrapping_tournament.find_all(\"td\",\"day-table-score\"))\n",
+        "      scrapping_tournament=scrapping_tournament[0]\n",
+        "      all_round=scrapping_tournament.find_all(\"tbody\")\n",
+        "      round_tracker=0\n",
+        "      game_tracker=0\n",
+        "      for round in all_round:\n",
+        "        all_games_round=round.find_all(\"td\",\"day-table-name\")\n",
+        "\n",
+        "        round_name=scrapping_tournament.find_all(\"th\")[round_tracker]\n",
+        "        # print(all_games_round)\n",
+        "        for game_number in range(0,len(all_games_round),2):\n",
+        "          game_dict={}\n",
+        "          game_dict[\"tournament_name\"]=tournament_row[\"tournament_name\"]\n",
+        "          game_dict[\"tournament_date\"]=tournament_row[\"tournament_date\"]\n",
+        "          game_dict[\"round\"]=round_name.text\n",
+        "          game_dict[\"winner_name\"]=all_games_round[game_number].text.strip()\n",
+        "          game_dict[\"loser_name\"]=all_games_round[game_number+1].text.strip()\n",
+        "\n",
+        "          game_dict[\"score\"]=re.sub(r'\\s+','-',scrapping_tournament.find_all(\"td\",\"day-table-score\")[game_tracker].text.strip().replace(\"\\r\\n\",''))\n",
+        "          list_matchs_tournament.append(game_dict)\n",
+        "          game_tracker+=1 #need to count the number of games\n",
+        "\n",
+        "        round_tracker+=1\n",
+        "    else:\n",
+        "      game_dict={}\n",
+        "      game_dict[\"tournament_name\"]=tournament_row[\"tournament_name\"]\n",
+        "      game_dict[\"tournament_date\"]=tournament_row[\"tournament_date\"]\n",
+        "      list_matchs_tournament.append(game_dict)\n",
+        "    return list_matchs_tournament"
       ],
       "metadata": {
         "id": "-SCDJNk7h8GT"
@@ -447,7 +450,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOXaVBeJhQBSOYV3BRObO0u",
+      "authorship_tag": "ABX9TyOL8Z8sZ/06gZacsLr8QgzD",
       "include_colab_link": true
     },
     "kernelspec": {
