--- a/functions/functions_fixed_table.ipynb
+++ b/functions/functions_fixed_table.ipynb
@@ -363,7 +363,7 @@
         "  Takes a row of the df_tournament.csv and returns the different games\n",
         "  \"\"\"\n",
         "  list_matchs_tournament=[]\n",
-        "  if \"laver-cup\" in tournament_row[\"url\"]:\n",
+        "  if \"laver-cup\" in tournament_row[\"url\"] or \"atp-cup\" in tournament_row[\"url\"]:\n",
         "    return []\n",
         "  else:\n",
         "    tournament_url_archive=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
@@ -450,7 +450,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOL8Z8sZ/06gZacsLr8QgzD",
+      "authorship_tag": "ABX9TyM7iQJHx7DdtKPedk0FazzU",
       "include_colab_link": true
     },
     "kernelspec": {
