--- a/update_weekly.ipynb
+++ b/update_weekly.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7r4oaU0NNl0bSEcXJhYQU",
+      "authorship_tag": "ABX9TyP4G921obVinbtnRoEQXium",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,25 +42,23 @@
         "install_package(\"requests\")\n",
         "install_package(\"PyGitHub\")\n",
         "install_package(\"pandas\")\n",
-        "install_package(\"tqdm\")"
+        "install_package(\"tqdm\")\n",
+        "install_package(\"xlrd>=2.0.1\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oHh3Jgp5dHP_",
-        "outputId": "f5156e4f-6efa-4cc7-cf4d-3a71d4e4111e"
+        "outputId": "2daf2dcf-1469-4cea-c18f-ea081c97c70a"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Successfully installed requests\n",
-            "Successfully installed PyGitHub\n",
-            "Successfully installed pandas\n",
-            "Successfully installed tqdm\n"
+            "Successfully installed xlrd>=2.0.1\n"
           ]
         }
       ]
