--- a/update_weekly.ipynb
+++ b/update_weekly.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4G921obVinbtnRoEQXium",
+      "authorship_tag": "ABX9TyN2q/kcgqmqX3J8ImHxWAFC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,22 +43,28 @@
         "install_package(\"PyGitHub\")\n",
         "install_package(\"pandas\")\n",
         "install_package(\"tqdm\")\n",
-        "install_package(\"xlrd>=2.0.1\")"
+        "install_package(\"xlrd>=2.0.1\")\n",
+        "install_package(\"openpyxl\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oHh3Jgp5dHP_",
-        "outputId": "2daf2dcf-1469-4cea-c18f-ea081c97c70a"
+        "outputId": "0c8380e2-d054-42b3-efa1-9b919e4388d7"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Successfully installed xlrd>=2.0.1\n"
+            "Successfully installed requests\n",
+            "Successfully installed PyGitHub\n",
+            "Successfully installed pandas\n",
+            "Successfully installed tqdm\n",
+            "Successfully installed xlrd>=2.0.1\n",
+            "Successfully installed openpyxl\n"
           ]
         }
       ]
